Update index.html for book-details.html

--- a/index.html
+++ b/index.html
@@ -361,38 +361,97 @@
     </div>
 
     <div class="footer">
-        <div class="social-links">
-            <a href="https://www.instagram.com/johncolt29" target="_blank" aria-label="Follow Iron Heist on Instagram">
-                <img src="instagram.png" alt="Instagram">
-            </a>
-            <a href="https://www.wattpad.com/user/iron_heist" target="_blank" aria-label="Follow Iron Heist on Wattpad">
-                <img src="wattpad.png" alt="Wattpad">
-            </a>
-        </div>
+    <div class="social-links">
+        <a href="https://www.instagram.com/johncolt29" target="_blank" aria-label="Follow Iron Heist on Instagram">
+            <img src="instagram.png" alt="Instagram">
+        </a>
+        <a href="https://www.wattpad.com/user/iron_heist" target="_blank" aria-label="Follow Iron Heist on Wattpad">
+            <img src="wattpad.png" alt="Wattpad">
+        </a>
+        <a href="https://ironheist6.tumblr.com/" target="_blank" aria-label="Follow Iron Heist on Tumblr">
+            <img src="tumblr.png" alt="Tumblr">
+        </a>
+    </div>
 
         <div class="attribution">
             <a href="https://www.flaticon.com/free-icons/wattpad" title="wattpad icons" style="color: #FFA500;">Wattpad icons created by Freepik - Flaticon</a><br>
-            <a href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons" style="color: #FFA500;">Instagram logo icons created by Freepik - Flaticon</a>
+            <a href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons" style="color: #FFA500;">Instagram logo icons created by Freepik - Flaticon</a><br>
+            <a href="https://www.flaticon.com/free-icons/tumblr" title="tumblr icons" style="color: #FFA500;">Tumblr icons created by Freepik - Flaticon</a>
         </div>
 
         <p class="date-time" id="date-time"></p>
 
         <div class="copyright">
-            © <span id="current-year"></span> | All Rights Reserved. Do not use without permission. For permission, email at <a href="mailto:ironheist6@gmail.com" style="color: #FFA500;">ironheist6@gmail.com</a>
+            © <span id="current-year"></span> | All Rights Reserved. Do not use without permission. For permission, email at <a href="/cdn-cgi/l/email-protection#57e7f6f2f7e0e5e2f2f7b517e0eaf6e2f2f779e4e8ea" style="color: #FFA500;"><span class="__cf_email__" data-cfemail="4f3f2e2a2f383d3a2a2f6c0f38322e3a2a2f613c3032">[email&#160;protected]</span></a>
         </div>
     </div>
 
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
     <script>
     const books = [
-        { title: "Garden of Grief", href: "pdfs/GARDEN OF GRIEF.pdf", imgSrc: "GOG.jpeg", alt: "Garden of Grief - A Collection of Poems by Iron Heist" },
-        { title: "A Diary of My Thoughts", href: "pdfs/A Diary of my Thoughts.pdf", imgSrc: "A Diary of my thoughts.jpeg", alt: "A Diary of My Thoughts - Philosophical Poetry by Iron Heist" },
-        { title: "Midday Blues", href: "pdfs/Midday Blues.pdf", imgSrc: "Midday Blues.jpeg", alt: "Midday Blues - Emotional Poetry by Iron Heist" },
-        { title: "Fading Light?", href: "pdfs/Fading Light.pdf", imgSrc: "Fading Light.jpeg", alt: "Fading Light? - Philosophical Poetry by Iron Heist" },
-        { title: "Dawn & Dusk", href: "pdfs/Dawn and Dusk.pdf", imgSrc: "Dawn & Dusk.jpeg", alt: "Dawn & Dusk - Reflective Poetry by Iron Heist" },
-        { title: "A Letdown", href: "pdfs/A Letdown.pdf", imgSrc: "A Letdown.jpeg", alt: "A Letdown - Emotional Poetry by Iron Heist" },
-        { title: "Drunk Off Her", href: "pdfs/DRUNK OFF HER.pdf", imgSrc: "Drunk OFF her.jpeg", alt: "Drunk Off Her - Romantic Poetry by Iron Heist" },
-        { title: "You and the Moon", href: "pdfs/You and the Moon.pdf", imgSrc: "You are my moonlight.jpeg", alt: "You and the Moon - Romantic Poetry by Iron Heist" },
-        { title: "A Fool's Dream", href: "pdfs/A Fool's Dream.pdf", imgSrc: "A Fools Dream.jpeg", alt: "A Fool's Dream - Philosophical Poetry by Iron Heist" }
+        { 
+            title: "Garden of Grief", 
+            href: "pdfs/GARDEN OF GRIEF.pdf", 
+            imgSrc: "GOG.jpeg", 
+            alt: "Garden of Grief - A Collection of Poems by Iron Heist",
+            tooltip: "Enter a poet’s tender battlefield, where grief blooms into raw verse, tracing love’s scars, faith’s doubts, and the fragile light of a soul navigating darkness and dawn."
+        },
+        { 
+            title: "A Diary of My Thoughts", 
+            href: "pdfs/A Diary of my Thoughts.pdf", 
+            imgSrc: "A Diary of my thoughts.jpeg", 
+            alt: "A Diary of My Thoughts - Philosophical Poetry by Iron Heist",
+            tooltip: "Step into a poet’s soul, where sleepless nights and burning hearts weave an intimate tapestry of love, loss, and the relentless search for light in the dark."
+        },
+        { 
+            title: "Midday Blues", 
+            href: "pdfs/Midday Blues.pdf", 
+            imgSrc: "Midday Blues.jpeg", 
+            alt: "Midday Blues - Emotional Poetry by Iron Heist",
+            tooltip: "Delve into a poet’s midday reverie, where love’s quiet ache and faith’s fragile dance unfold in lyrical whispers of hope and renewal."
+        },
+        { 
+            title: "Fading Light?", 
+            href: "pdfs/Fading Light.pdf", 
+            imgSrc: "Fading Light.jpeg", 
+            alt: "Fading Light? - Philosophical Poetry by Iron Heist",
+            tooltip: "Embark on a tender descent into dusk, where poems of love and loss flicker like fading light, revealing the beauty and ache of life’s silent struggles."
+        },
+        { 
+            title: "Dawn & Dusk", 
+            href: "pdfs/Dawn and Dusk.pdf", 
+            imgSrc: "Dawn & Dusk.jpeg", 
+            alt: "Dawn & Dusk - Reflective Poetry by Iron Heist",
+            tooltip: "Wander through a poet’s twilight, where dawn and dusk collide in verses of growth and grief, unveiling the fractured beauty of a soul caught between shadows and light."
+        },
+        { 
+            title: "A Letdown", 
+            href: "pdfs/A Letdown.pdf", 
+            imgSrc: "A Letdown.jpeg", 
+            alt: "A Letdown - Emotional Poetry by Iron Heist",
+            tooltip: "Step into a poet’s unraveling, where love’s steep price fractures the soul into haunting fragments, tracing a path of loss and self-destruction through a winter that never thaws."
+        },
+        { 
+            title: "Drunk Off Her", 
+            href: "pdfs/DRUNK OFF HER.pdf", 
+            imgSrc: "Drunk OFF her.jpeg", 
+            alt: "Drunk Off Her - Romantic Poetry by Iron Heist",
+            tooltip: "Drift through a haze of longing, where memories of her linger like a bittersweet intoxicant, binding a poet to a love that burns bright yet slips away like sand through desperate hands."
+        },
+        { 
+            title: "You and the Moon", 
+            href: "pdfs/You and the Moon.pdf", 
+            imgSrc: "You are my moonlight.jpeg", 
+            alt: "You and the Moon - Romantic Poetry by Iron Heist",
+            tooltip: "Wander a lover’s celestial reverie, where the moon and tides mirror a heart torn between devotion and distance, whispering vows to a beloved just out of reach."
+        },
+        { 
+            title: "A Fool's Dream", 
+            href: "pdfs/A Fool's Dream.pdf", 
+            imgSrc: "A Fools Dream.jpeg", 
+            alt: "A Fool's Dream - Philosophical Poetry by Iron Heist",
+            tooltip: "Plunge into the abyss of a restless mind, where dreams crumble like ash and ghosts of doubt haunt every page, leaving only echoes of what might have been."
+        }
     ];
 
     function renderBooks() {
@@ -400,13 +459,13 @@
         let html = '';
         books.forEach(book => {
             html += `
-                <div class="book" data-title="${book.title}" role="article" aria-label="${book.title}">
-                    <a href="viewer.html?pdf=${encodeURIComponent(book.href)}&title=${encodeURIComponent(book.title)}" target="_blank">
-                        <img src="${book.imgSrc}" alt="${book.alt}" loading="lazy">
-                        <p class="book-title">${book.title}</p>
-                    </a>
-                </div>
-            `;
+    <div class="book" data-title="${book.title}" role="article" aria-label="${book.title}" title="${book.tooltip}">
+        <a href="book-details.html?title=${encodeURIComponent(book.title)}" target="_blank">
+            <img src="${book.imgSrc}" alt="${book.alt}" loading="lazy">
+            <p class="book-title">${book.title}</p>
+        </a>
+    </div>
+`;
         });
         bookCollection.innerHTML = html;
     }
@@ -481,6 +540,7 @@
         setInterval(updateDateTime, 1000);
         if (localStorage.getItem('darkMode') === 'true') toggleDarkMode();
     });
-</script>
+    </script>
+    <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'929aa54888786763',t:'MTc0MzUzNzM0Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
 </body>
 </html>
